tests/single_instruction_translation_validation/mcsema/memory-variants/xaddb_m8_r8/Output/test-lstate.out
/home/ubuntu/Install/llvm/llvm.4.0.0.install//bin/opt: test.mod.ll:182:29: error: use of undefined value '@__remill_fetch_and_add_8'
  %9 = call %struct.Memory* @__remill_fetch_and_add_8(%struct.Memory* %0, i64 %2, i8* nonnull dereferenceable(1) %7) #24
                            ^
0.01user 0.01system 0:00.03elapsed 110%CPU (0avgtext+0avgdata 27544maxresident)k
0inputs+16outputs (0major+3267minor)pagefaults 0swaps
